@@ -3,7 +3,7 @@
 // +----------------------------------------------------------------------+
 // | PHP version 5                                                        |
 // +----------------------------------------------------------------------+
-// | Copyright 2005-2006 the Seasar Foundation and the Others.            |
+// | Copyright 2004-2005 the Seasar Foundation and the Others.            |
 // +----------------------------------------------------------------------+
 // | Licensed under the Apache License, Version 2.0 (the "License");      |
 // | you may not use this file except in compliance with the License.     |
@@ -19,30 +19,23 @@
 // +----------------------------------------------------------------------+
 // | Authors: nowel                                                       |
 // +----------------------------------------------------------------------+
-// $Id: $
 //
+// $Id: $
 /**
  * @author nowel
  */
-final class S2Dao_PDOType {
-    
-    private static $TYPES = array(
-        S2Dao_PHPType::String => PDO::PARAM_STR,
-        S2Dao_PHPType::Integer => PDO::PARAM_INT,
-        S2Dao_PHPType::Double => PDO::PARAM_INT,
-        S2Dao_PHPType::Boolean => PDO::PARAM_BOOL,
-        S2Dao_PHPType::Null => PDO::PARAM_NULL,
-        S2Dao_PHPType::Resource => PDO::PARAM_LOB,
-        S2Dao_PHPType::Object => PDO::PARAM_STMT,
-        S2Dao_PHPType::Unknown => PDO::PARAM_STMT
-    );
-    
-    public static function gettype($phpType = null){
-        if($phpType === null){
-            return PDO::PARAM_NULL;
-        }
-        return self::$TYPES[$phpType];
-    }
+interface S2Dao_ValueTypeFactory {
+
+    /**
+     * @return S2Dao_ValueType
+     */
+    public function getValueTypeByName($name);
+
+    /**
+     * @return S2Dao_ValueType
+     */
+    public function getValueTypeByClassName($clazzName);
 
 }
+
 ?>
