@@ -35,7 +35,7 @@ class S2Dao_DtoMetaDataImpl implements S2Dao_DtoMetaData {
     public function __construct(){
         $this->__construct0();
         $args = func_get_args();
-        if(1 < func_num_args() === 0){
+        if(1 < func_num_args()){
             $this->__call('__construct1', $args);
         }
     }
@@ -45,7 +45,7 @@ class S2Dao_DtoMetaDataImpl implements S2Dao_DtoMetaData {
     }
 
     public function __construct1(ReflectionClass $beanClass,
-                                S2Dao_BeanAnnotationReader $beanAnnotationReader) {
+                                 S2Dao_BeanAnnotationReader $beanAnnotationReader) {
         $this->setBeanClass($beanClass);
         $this->setBeanAnnotationReader($beanAnnotationReader);
         $this->initialize();
