@@ -17,12 +17,12 @@
 // | either express or implied. See the License for the specific language |
 // | governing permissions and limitations under the License.             |
 // +----------------------------------------------------------------------+
-// | Authors: klove, nowel                                                       |
+// | Authors: nowel                                                       |
 // +----------------------------------------------------------------------+
 //
 // $Id: $
 /**
- * @author klove, nowel
+ * @author nowel
  */
 interface S2Dao_ResultSetHandler {
     public function handle(PDOStatement $resultSet);
