@@ -24,25 +24,14 @@
 /**
  * @author nowel
  */
-final class S2Dao_PDOType {
+class S2Dao_AtomDateType extends S2Dao_DateType {
     
-    private static $TYPES = array(
-        S2Dao_PHPType::String => PDO::PARAM_STR,
-        S2Dao_PHPType::Integer => PDO::PARAM_INT,
-        S2Dao_PHPType::Double => PDO::PARAM_INT,
-        S2Dao_PHPType::Boolean => PDO::PARAM_BOOL,
-        S2Dao_PHPType::Null => PDO::PARAM_NULL,
-        S2Dao_PHPType::Resource => PDO::PARAM_LOB,
-        S2Dao_PHPType::Object => PDO::PARAM_STMT,
-        S2Dao_PHPType::Unknown => PDO::PARAM_STMT
-    );
-    
-    public static function gettype($phpType = null){
-        if($phpType === null){
-            return PDO::PARAM_NULL;
-        }
-        return self::$TYPES[$phpType];
+    /**
+     * 
+     */
+    public function bindValue(PDOStatement $stmt, $index, $value){
+        $stmt->bindValue($index, date(DATE_ATOM, (integer)$value), PDO::PARAM_STR);
     }
-
 }
+
 ?>
