@@ -21,28 +21,15 @@
 // +----------------------------------------------------------------------+
 // $Id: $
 //
-/**
- * @author nowel
- */
-final class S2Dao_PDOType {
-    
-    private static $TYPES = array(
-        S2Dao_PHPType::String => PDO::PARAM_STR,
-        S2Dao_PHPType::Integer => PDO::PARAM_INT,
-        S2Dao_PHPType::Double => PDO::PARAM_INT,
-        S2Dao_PHPType::Boolean => PDO::PARAM_BOOL,
-        S2Dao_PHPType::Null => PDO::PARAM_NULL,
-        S2Dao_PHPType::Resource => PDO::PARAM_LOB,
-        S2Dao_PHPType::Object => PDO::PARAM_STMT,
-        S2Dao_PHPType::Unknown => PDO::PARAM_STMT
-    );
-    
-    public static function gettype($phpType = null){
-        if($phpType === null){
-            return PDO::PARAM_NULL;
-        }
-        return self::$TYPES[$phpType];
-    }
-
+interface S2Dao_PHPType {
+    const Boolean = 'boolean';
+    const Integer = 'integer';
+    const Double = 'double';
+    const Float = 'float';
+    const String = 'string';
+    const Object = 'object';
+    const Resource = 'resource';
+    const Null = 'NULL';
+    const Unknown = 'unknown type';
 }
 ?>
