@@ -24,25 +24,40 @@
 /**
  * @author nowel
  */
-final class S2Dao_PDOType {
+final class S2Dao_ValueTypes {
     
-    private static $TYPES = array(
-        S2Dao_PHPType::String => PDO::PARAM_STR,
-        S2Dao_PHPType::Integer => PDO::PARAM_INT,
-        S2Dao_PHPType::Double => PDO::PARAM_INT,
-        S2Dao_PHPType::Boolean => PDO::PARAM_BOOL,
-        S2Dao_PHPType::Null => PDO::PARAM_NULL,
-        S2Dao_PHPType::Resource => PDO::PARAM_LOB,
-        S2Dao_PHPType::Object => PDO::PARAM_STMT,
-        S2Dao_PHPType::Unknown => PDO::PARAM_STMT
+    public static $types = array(
+        S2Dao_PHPType::String => 'S2Dao_StringType',
+        S2Dao_PHPType::Integer => 'S2Dao_IntegerType',
+        S2Dao_PHPType::Double => 'S2Dao_DoubleType',
+        S2Dao_PHPType::Boolean => 'S2Dao_BooleanType',
+        S2Dao_PHPType::Null => 'S2Dao_NullType',
+        S2Dao_PHPType::Resource => 'S2Dao_LobType',
+        S2Dao_PHPType::Object => 'S2Dao_ObjectType'
     );
     
-    public static function gettype($phpType = null){
-        if($phpType === null){
-            return PDO::PARAM_NULL;
+    private static $instance = array();
+    
+    private function __construct(){
+    }
+    
+    public static function getValueType($type = null){
+        if($type === null){
+            return self::getValueType(S2Dao_PHPType::Null);
         }
-        return self::$TYPES[$phpType];
+        if(isset(self::$instance[$type])){
+            return self::$instance[$type];
+        }
+        $class = null;
+        if(isset(self::$types[$type])){
+            $class = self::$types[$type];
+        } else {
+            $class = self::$types[S2Dao_PHPType::Object];
+        }
+        $instance = self::$instance[$type] = new $class;
+        return $instance;
     }
 
 }
+
 ?>
